--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -1,29 +1,22 @@
 ---
 title: "Final Project"
-output: html_document
-date: "2024-04-08"
+author: "Ryan Fernald, Eden Kidane"
+format: 
+  html:
+    embed-resources: true
+    code-tools: true
+    code-summary: "Code"
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r}
+# Initialize an empty data frame to store the filtered data
+filtered_data <- data.frame(ID = sample_data$ID)
+
+# Loop through the columns of the sample data frame, starting from the third column
+for (i in seq(3, ncol(sample_data), by = 2)) {
+  filtered_data <- cbind(filtered_data, sample_data[, i])
+}
+
+# View the resulting data
+print(filtered_data)
 ```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
