--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -12,6 +12,7 @@ format:
 library(tidyverse)
 library(ggplot2)
 library(ggthemes)
+library(patchwork)
 ```
 
 ```{r}
@@ -140,8 +141,44 @@ ggplot(data = filtered_data, aes(x = Usage,
 ```
 
 ```{r}
+colors <- c("darkred", "darkcyan", "darkblue", "darkgreen", "darkorange", "purple", "darkgray", "darkmagenta", "darkolivegreen", "darkslategray")
+
+# Split variables into two sets
+vars_set1 <- names(filtered_data)[-1][1:5]
+vars_set2 <- names(filtered_data)[-1][6:10]
+
+# Function to create plots for a set of variables
+create_plots <- function(vars, title_prefix) {
+  plots <- lapply(vars, function(var) {
+    ggplot(data = filtered_data, aes_string(x = "Usage", y = var)) +
+      geom_bar(stat = "identity", fill = colors[match(var, names(filtered_data)[-1])]) +
+      labs(x = "Screen Time",
+           y = var) +
+      theme(plot.title = element_text(hjust = 0.3, size = 10)) +
+      ggtitle(paste(var))
+  })
+  multiplot <- wrap_plots(plots, nrow = 2, width = 10, height = 10)
+  return(multiplot)
+}
+
+# Create plots for set 1
+multiplot_set1 <- create_plots(vars_set1, "Set 1:")
+
+# Save set 1
+ggsave("plots_set1.png", multiplot_set1, width = 10, height = 10)
+
+# Create plots for set 2
+multiplot_set2 <- create_plots(vars_set2, "Set 2:")
+
+# Save set 2
+ggsave("plots_set2.png", multiplot_set2, width = 10, height = 10)
+
+multiplot_set1
+multiplot_set2
+```
+
+```{r}
 x <- read.csv("https://raw.githubusercontent.com/ryanfernald/MATH167R-Final-Project/main/DATA/Association%20between%20smartphone%20usage%20and%20health%20outcomes%20of%20adolescents%20as%20Percentages.csv")
 x
 
 ```
-
